# developerpod

./: Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md  kcup-format.md  providers.md  writing-your-own.md
docs/src/examples/: repo-mood.md  standup.md
docs/src/reference/: cli.md  env-vars.md
examples/: repo-mood.kcup.toml  standup.kcup.toml
src/: brew.rs  gather.rs  main.rs  output.rs  pod.rs  provider.rs
