[package]
name = "developerpod"
version = "0.1.0"
edition = "2024"
description = "A CLI that runs declarative AI-backed kcups — TOML pods that describe context to gather and what to ask a model"
license = "MIT"

[[bin]]
name = "developerpod"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
anyhow = "1"
colored = "2"
