[package]
name = "developerpod"
version = "0.2.0"
edition = "2024"
authors = ["David Liedle <david.liedle@protonmail.com>"]
description = "Developerpod is the machine. Kcups are the pods — tiny *.kcup.toml files declaring what to gather, what to ask a model, and what shape the answer should take. The machine handles the rest: context, API calls, structured output. Tiny AI-backed dev tools, one TOML file each."
license = "MIT"
repository = "https://github.com/DevRelopers/developerpod"
homepage = "https://developerpod.com"
readme = "README.md"
keywords = ["ai", "cli", "llm", "toml", "devtools"]
categories = ["command-line-utilities"]

[[bin]]
name = "developerpod"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
anyhow = "1"
colored = "2"
